--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
+    <img src="IMG-20251126-WA0056.jpg" alt="logo" width="70px" height="70px"> <h1>PLATEFORME DE GESTION DES SEMINARISTES</h1>
+
 
     <div class="app-container">
         <!-- Sidebar -->
