--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 </head>
 
 <body>
-    <img src="IMG-20251126-WA0056.jpg" alt="logo" width="70px" height="70px">
-    <h1>PLATEFORME DE GESTION DES SEMINARISTES</h1>
-
+    <div class="header-top">
+        <img src="IMG-20251126-WA0056.jpg" alt="Logo JOSPIA" class="header-logo">
+        <h3>PLATEFORME DE GESTION DES SEMINARISTES</h3>
+    </div>
 
     <div class="app-container">
         <!-- Sidebar -->
