--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="brand-text">
                     <h1>JOSPIA</h1>
-                    <p>Commission Scientifique</p>
+                    <p>Commission administration & Scientifique</p>
                 </div>
             </div>
 
