--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
 
                 <div class="nav-group">
                     <p class="nav-label">Filtres</p>
-                    <a href="#" class="nav-link" data-route="levels">
+                    <a href="#" class="nav-link" data-route="levels" data-admin-only="true">
                         <i class="ri-bar-chart-grouped-line"></i>
                         <span>Par Niveau</span>
                     </a>
-                    <a href="#" class="nav-link" data-route="dortoirs">
+                    <a href="#" class="nav-link" data-route="dortoirs" data-admin-only="true">
                         <i class="ri-building-4-line"></i>
                         <span>Par Dortoir</span>
                     </a>
-                    <a href="#" class="nav-link" data-route="harakas">
+                    <a href="#" class="nav-link" data-route="harakas" data-admin-only="true">
                         <i class="ri-group-line"></i>
                         <span>Par Halaqa</span>
                     </a>
