--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
             <nav class="nav-menu">
                 <div class="nav-group">
                     <p class="nav-label">Menu</p>
-                    <a href="#" class="nav-link active" data-route="dashboard">
+                    <a href="#" class="nav-link active" data-route="dashboard" data-admin-only="true">
                         <i class="ri-dashboard-line"></i>
                         <span>Tableau de bord</span>
                     </a>
-                    <a href="#" class="nav-link" data-route="all">
+                    <a href="#" class="nav-link" data-route="all" data-admin-only="true">
                         <i class="ri-team-line"></i>
                         <span>Séminaristes</span>
                     </a>
-                    <a href="#" class="nav-link" data-route="search">
+                    <a href="#" class="nav-link" data-route="search" data-admin-only="true">
                         <i class="ri-search-line"></i>
                         <span>Recherche</span>
                     </a>
@@ -88,7 +88,7 @@
                 <div class="nav-group">
                     <p class="nav-label">Données</p>
 
-                    <a href="#" class="nav-link" data-route="import">
+                    <a href="#" class="nav-link" data-route="import" data-admin-only="true">
                         <i class="ri-file-excel-line"></i>
                         <span>Import / Export</span>
                     </a>
