--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <!-- QRCode.js for QR code generation -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 
+    <!-- docx for Word document generation -->
+    <script src="https://unpkg.com/docx@8.5.0/build/index.js"></script>
+
 
 </head>
 
