--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 
     <!-- docx for Word document generation -->
-    <script src="https://cdn.jsdelivr.net/npm/docx@8.5.0/build/index.js"></script>
+    <script src="https://unpkg.com/docx@8.5.0/build/index.umd.js"></script>
 
 
 </head>
